--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 NotBlank={0} é obrigatório
 NotNull= {0} é obrigatório
-PositiveOrZero= {0} deve ser um valor maior ou igual a 0
+#PositiveOrZero= {0} deve ser um valor maior ou igual a zero
 
 #Restaurante
 NotNull.restaurante.taxaFrete={0} é obrigatória
