--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
 NotBlank={0} é obrigatório
 NotNull= {0} é obrigatório
-#PositiveOrZero= {0} deve ser um valor maior ou igual a zero
+PositiveOrZero= {0} deve ser um valor maior ou igual a zero
+
+# do Bean Validation
+#javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
+#TaxaFrete.invalida=Taxa frete está inválida, informe um valor positivo
 
 #Restaurante
 NotNull.restaurante.taxaFrete={0} é obrigatória
