--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,8 @@
 NotBlank={0} é obrigatório
 NotNull= {0} é obrigatório
-#PositiveOrZero= {0} deve ser um valor maior ou igual a zero
+PositiveOrZero= {0} deve ser um valor maior ou igual a zero
+Multiplo={0} deve ser um valor múltiplo de {1}
 
-# do Bean Validation
-#javax.validation.constraints.PositiveOrZero.message=deve ser um número positivo
-TaxaFrete.invalida={0} inválida, informe um valor positivo
 
 #Restaurante
 NotNull.restaurante.taxaFrete={0} é obrigatória
