Revisando e ajustando as mensagens de validação com o uso de DTOs

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,11 +6,11 @@ ValorZeroIncluiDescricao= {1} deve ser {2}
 
 
 #Restaurante
-NotNull.restaurante.taxaFrete={0} é obrigatória
-NotNull.restaurante.cozinha={0} é obrigatória
-restaurante.nome=Nome do restaurante
-restaurante.taxaFrete=Taxa frete do restaurante
-restaurante.cozinha=Cozinha do restaurante
+NotNull.restauranteInput.taxaFrete={0} é obrigatória
+NotNull.restauranteInput.cozinha={0} é obrigatória
+restauranteInput.nome=Nome do restaurante
+restauranteInput.taxaFrete=Taxa frete do restaurante
+restauranteInput.cozinha=Cozinha do restaurante
 
 #Estado
 estado.id=Código do estado
