--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,13 +13,13 @@ restauranteInput.taxaFrete=Taxa frete do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 
 #Estado
-estado.id=Código do estado
-estado.nome=Nome do estado
+estadoInput.id=Código do estado
+estadoInput.nome=Nome do estado
 
 #Cozinha
-cozinha.id=Código da cozinha
-cozinha.nome=Nome da cozinha
+cozinhaInput.id=Código da cozinha
+cozinhaInput.nome=Nome da cozinha
 
 #Cidade
-cidade.nome=Nome da cidade
-cidade.estado=Estado da cidade
+cidadeInput.nome=Nome da cidade
+cidadeInput.estado=Estado da cidade
