Refatorando serviço de cadastro de restaurante para incluir endereço

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,3 +23,12 @@ cozinhaInput.nome=Nome da cozinha
 #Cidade
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
+
+#Endereco
+endereco= Endereço
+endereco.logradouro=Logradouro
+endereco.numero=Número do logradouro
+endereco.cidade=Cidade
+endereco.cidade.id=Código da cidade
+endereco.cep=Cep
+endereco.bairro=Bairro
