--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,7 @@ endereco.cidade=Cidade
 endereco.cidade.id=Código da cidade
 endereco.cep=Cep
 endereco.bairro=Bairro
+
+#Grupo
+grupoInput.id=Código do grupo
+grupoInput.nome=Nome do grupo
