Finalizando a implementacao dos endpoints de usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ NotNull= {0} é obrigatório
 PositiveOrZero= {0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao= {1} deve ser {2}
+Email=E-mail do usuário deve ser um endereço de e-mail válido
 
 
 #Restaurante
@@ -36,3 +37,18 @@ endereco.bairro=Bairro
 #Grupo
 grupoInput.id=Código do grupo
 grupoInput.nome=Nome do grupo
+
+#Usuario
+usuarioInput.id=Código do usuário
+usuarioInput.nome=Nome do usuário
+usuarioInput.email=E-mail do usuário
+usuarioInput.senha=Senha do usuário
+
+#UsuarioSenha
+usuarioSenhaInput.senhaAtual=Senha atual
+usuarioSenhaInput.novaSenha=Nova senha
+
+#UsuarioSemSenha
+usuarioSemSenhaInput.nome=Nome do usuário
+usuarioSemSenhaInput.email=E-mail do usuário
+usuarioSemSenhaInput.senha=Senha do usuário
