Implementando os endpoints de produtos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,3 +52,9 @@ usuarioSenhaInput.novaSenha=Nova senha
 usuarioSemSenhaInput.nome=Nome do usuário
 usuarioSemSenhaInput.email=E-mail do usuário
 usuarioSemSenhaInput.senha=Senha do usuário
+
+#Produto
+produtoInput.nome=Nome do produto
+produtoInput.descricao=Descrição do produto
+produtoInput.preco=Preço do produto
+produtoInput.ativo=Status do produto
