Ajuste do detached entity passed to persist e mensagens de validação do pedido

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,3 +58,23 @@ produtoInput.nome=Nome do produto
 produtoInput.descricao=Descrição do produto
 produtoInput.preco=Preço do produto
 produtoInput.ativo=Status do produto
+
+
+#Pedido
+pedidoInput.enderecoEntrega=Endereço de entrega do pedido
+pedidoInput.enderecoEntrega.logradouro=Logradouro do endereço de entrega do pedido
+pedidoInput.enderecoEntrega.numero=Número do logradouro do endereço de entrega do pedido
+pedidoInput.enderecoEntrega.cidade=Cidade do endereço de entrega do pedido
+pedidoInput.enderecoEntrega.cidade.id=Código da cidade do endereço de entrega do pedido
+pedidoInput.enderecoEntrega.cep=Cep do endereço de entrega do pedido
+pedidoInput.enderecoEntrega.bairro=Bairro do endereço de entrega do pedido
+pedidoInput.formaPagamento=Forma de pagamento do pedido
+pedidoInput.formaPagamento.id=Código da forma de pagamento do pedido
+pedidoInput.restaurante=Restaurante do pedido
+pedidoInput.restaurante.id=Código do restaurante do pedido
+pedidoInput.itens=Itens do pedido
+Size.pedidoInput.itens=O pedido deve ter pelo menos um item
+NotNull.pedidoInput.itens.produtoId=Código do produto do item pedido é obrigatório
+NotNull.pedidoInput.itens.quantidade=Quantidade do item pedido é obrigatório
+
+
