Tratando BindException ao enviar parâmetros de URL inválidos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ PositiveOrZero= {0} deve ser um valor maior ou igual a zero
 Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao= {1} deve ser {2}
 Email=E-mail do usuário deve ser um endereço de e-mail válido
+typeMismatch.java.time.OffsetDateTime= {0} deve ser uma data/ hora válida
+typeMismatch.java.lang.Long= {0} deve ser um número válido
 
 
 #Restaurante
@@ -77,4 +79,8 @@ Size.pedidoInput.itens=O pedido deve ter pelo menos um item
 NotNull.pedidoInput.itens.produtoId=Código do produto do item pedido é obrigatório
 NotNull.pedidoInput.itens.quantidade=Quantidade do item pedido é obrigatório
 
-
+#PedidoFilter
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
+pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
+pedidoFilter.dataCriacaoFim=Data final de criação do pedido
