--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -84,3 +84,8 @@ pedidoFilter.clienteId=Código do cliente
 pedidoFilter.restauranteId=Código do restaurante
 pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
 pedidoFilter.dataCriacaoFim=Data final de criação do pedido
+
+# Venda Diaria Filter
+vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
+vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
+vendaDiariaFilter.restauranteId=Código do restaurante
