--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -89,3 +89,10 @@ pedidoFilter.dataCriacaoFim=Data final de criação do pedido
 vendaDiariaFilter.dataCriacaoInicio=Data inicial de criação de pedido
 vendaDiariaFilter.dataCriacaoFim=Data final de criação de pedido
 vendaDiariaFilter.restauranteId=Código do restaurante
+
+
+#Foto Produto
+fotoProdutoInput.arquivo=Arquivo da foto do produto
+fotoProdutoInput.descricao=Descrição da foto do produto
+FileSize.fotoProdutoInput.arquivo= A foto deve ter um tamanho máximo de {1}
+
