Validando o content type do arquivo - criação da anotação de validação FileContentType

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,4 +95,4 @@ vendaDiariaFilter.restauranteId=Código do restaurante
 fotoProdutoInput.arquivo=Arquivo da foto do produto
 fotoProdutoInput.descricao=Descrição da foto do produto
 FileSize.fotoProdutoInput.arquivo= A foto deve ter um tamanho máximo de {1}
-
+FileContentType.fotoProdutoInput.arquivo= A foto deve ser do tipo JPEG ou PNG
