Customizando a página de OAuth2 Approval

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -96,3 +96,6 @@ fotoProdutoInput.arquivo=Arquivo da foto do produto
 fotoProdutoInput.descricao=Descrição da foto do produto
 FileSize.fotoProdutoInput.arquivo= A foto deve ter um tamanho máximo de {1}
 FileContentType.fotoProdutoInput.arquivo= A foto deve ser do tipo JPEG ou PNG
+
+scope.READ=Acesso de leitura
+scope.WRITE=Acesso de escrita
